--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^4",
+    "lodash": "^4.17.21",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
