--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "apollo-cache-inmemory": "^1.6.6",
     "framer-motion": "^4",
+    "graphql": "^16.0.0",
     "lodash": "^4.17.21",
     "next": "12.0.1",
     "react": "17.0.2",
