--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "cypress": "^8.7.0",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
     "prettier": "^2.4.1"
